# shareCount

./: README.md
.github/workflows/: build.yml  build_android.yml  build_backend.yml  build_frontend.yml  deploy.yml
app/shareCount/: package-lock.json  package.json
app/shareCount/src-tauri/: Cargo.toml  tauri.conf.json
backend/: .env  .env.test  Cargo.toml  README.md  launch_test.sh
backend/db/: docker-compose-test.yml  docker-compose.yml  reset.sh  shareCount.db
backend/db/init/: create.sh  data.sql  init.sql  schema.sql
backend/share_count/: .env  .env.test  Cargo.toml  diesel.toml
backend/share_count/migrations/2025-04-23-075530_create_count/: down.sql  up.sql
backend/share_count/src/: entrypoint.rs  entrypoints.rs  lib.rs  main.rs  models.rs  router.rs  schema.rs  state_server.rs
backend/share_count/src/entrypoint/: currency.rs  group_members.rs  groups.rs  transactions.rs
backend/share_count/tests/: api.rs  utils.rs
backend/src/: entrypoint.rs  lib.rs  main.rs  models.rs  router.rs  schema.rs  state_server.rs
backend/src/entrypoint/: group_members.rs  groups.rs  status.rs  transactions.rs
backend/tests/: api.rs
docker/: docker-compose.yml
docker/backend/: Dockerfile.yml
docker/db/: reset.sh
docker/db/init/: init.sql
frontend/: .gitignore  eslint.config.js  generateSW.mjs  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/scripts/: setupt.sh
frontend/src/: app.css  service-worker.js  sw.ts
frontend/src/components/: Balance.svelte  CurrencySelector.svelte  GroupView.svelte  GroupViewEditor.svelte  GroupView_MemberItem.svelte  InputNumber.svelte  Modal.svelte  ModalTypes.ts  Share.svelte  TransactionEditor.svelte  TransactionView.svelte  TransactionsView.svelte
frontend/src/db/: db.ts
frontend/src/lib/: TransactionView.svelte  TransactionsView.svelte  UTCDate.ts  currencyFormat.test.ts  currencyFormat.ts  menus.ts  pwa-init.js  shareCountAPI.ts  store.ts  types.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/stores/: SynchroHelper.ts  group.test.ts  group.ts  groupUsernames.test.ts  groupUsernames.ts  group_members.test.ts  group_members.ts  group_token.ts  group_transactions.test.ts  group_transactions.ts  (+2 more)
frontend/static/: off.html
frontend/wasm-lib/: Cargo.toml  README.md
frontend/wasm-lib/src/: lib.rs
(+6 files in other folders)
