[package]
name = "share_count"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
diesel = { version = "2.2.9", features = ["sqlite", "serde_json", "returning_clauses_for_sqlite_3_35", "chrono", "r2d2"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
axum = "0.8.3"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde_json = "1.0.140"
