[package]
name = "share_count"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
diesel = { version = "2.2.10", features = ["serde_json", "chrono", "r2d2", "numeric", "postgres", "postgres_backend"] }
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.8.3"}
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
uuid = { version = "1.16.0", features = ["v4"] }
bigdecimal = { version = "0.4.8", features = ["serde"] }

[dev-dependencies]
axum-test = "17.3.0"
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
