[package]
name = "wasm-lib"
version = "0.1.0"
authors = ["f4r3n <guillaume_k@hotmail.fr>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
bigdecimal = { version = "0.4.8", features = ["serde"] }
tsify = { version = "0.5.5", features = ["js"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true